--- a/src/index.scss
+++ b/src/index.scss
@@ -1,1 +1,9 @@
 @import "../node_modules/bulma/sass/utilities/_all.sass";
+@import "../node_modules/bulma/sass/base/_all.sass";
+@import "../node_modules/bulma/sass/layout/_all.sass";
+@import "../node_modules/bulma/sass/elements/_all.sass";
+@import "../node_modules/bulma/sass/form/_all.sass";
+
+.container {
+    background-color: #f8f8f8;
+}
