Wait for transaction to complete

--- a/src/index.scss
+++ b/src/index.scss
@@ -21,3 +21,9 @@
     flex-direction: column;
     align-items: flex-end;
 }
+
+.transaction-message {
+    position: fixed;
+    top: $block-spacing;
+    right: $block-spacing;
+}
